--- a/src/app/[locale]/industries-solutions/page.module.scss
+++ b/src/app/[locale]/industries-solutions/page.module.scss
@@ -18,6 +18,10 @@ $text-color: #212121;
 }
 
 .industries-solutions-page {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+
     .industries-hero {
         position: relative;
         height: 400px;
@@ -28,6 +32,13 @@ $text-color: #212121;
         text-align: center;
         color: #fff;
         overflow: hidden;
+        width: 100vw;
+        margin-left: calc(-50vw + 50%);
+        margin-right: calc(-50vw + 50%);
+        position: relative;
+        left: 0;
+        right: 0;
+        box-sizing: border-box;
 
         &__overlay {
             position: absolute;
@@ -41,6 +52,8 @@ $text-color: #212121;
             z-index: 2;
             max-width: 800px;
             padding: 0 20px;
+            margin: 0 auto;
+            box-sizing: border-box;
 
             h1 {
                 font-size: 3rem;
@@ -58,6 +71,12 @@ $text-color: #212121;
     .industries-solutions-header {
         background-color: #fff;
         padding-top: 80px;
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding-left: 20px;
+        padding-right: 20px;
+        box-sizing: border-box;
 
         .tabs {
             display: flex;
@@ -101,6 +120,13 @@ $text-color: #212121;
     .industries-solutions {
         padding: 40px 0;
         margin-bottom: 80px;
+        width: 100%;
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 20px;
+        padding-right: 20px;
+        box-sizing: border-box;
 
         h2 {
             font-size: 2rem;
@@ -108,7 +134,7 @@ $text-color: #212121;
             color: #ff6600;
             margin: 40px 0 20px;
         }
-        
+
         .industries-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -151,6 +177,62 @@ $text-color: #212121;
                 img {
                     filter: brightness(0.95);
                 }
+            }
+        }
+    }
+}
+
+// Responsive Design
+@media (max-width: 932px) {
+    .industries-solutions-page {
+        .industries-solutions-header {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+
+        .industries-solutions {
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .industries-solutions-page {
+        .industries-hero {
+            height: 300px;
+
+            &__content {
+                h1 {
+                    font-size: 2rem;
+                }
+
+                p {
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        .industries-solutions-header {
+            padding-top: 40px;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .industries-solutions {
+            padding-left: 15px;
+            padding-right: 15px;
+
+            h2 {
+                font-size: 1.5rem;
+            }
+        }
+
+        .tabs {
+            gap: 20px;
+
+            .tab {
+                font-size: 1rem;
             }
         }
     }
