--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,13 +16,33 @@ body {
 }
 
 body {
-    font-family: "Lato","Noto Sans JP","Hiragino Kaku Gothic Pro","ヒラギノ角ゴ Pro",meiryo,"メイリオ",arial,sans-serif;
+    font-family: "Lato", "Noto Sans JP", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro", meiryo, "メイリオ", arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
 // Ensure Header is full width
 .header {
+    width: 100vw !important;
+    margin-left: calc(-50vw + 50%) !important;
+    margin-right: calc(-50vw + 50%) !important;
+    position: relative !important;
+    left: 0 !important;
+    right: 0 !important;
+}
+
+// Ensure page banner is full width
+.page-banner-category {
+    width: 100vw !important;
+    margin-left: calc(-50vw + 50%) !important;
+    margin-right: calc(-50vw + 50%) !important;
+    position: relative !important;
+    left: 0 !important;
+    right: 0 !important;
+}
+
+// Ensure industries hero is full width
+.industries-hero {
     width: 100vw !important;
     margin-left: calc(-50vw + 50%) !important;
     margin-right: calc(-50vw + 50%) !important;
