--- a/src/components/common/SearchBar/SearchBar.module.scss
+++ b/src/components/common/SearchBar/SearchBar.module.scss
@@ -1,33 +1,49 @@
-@import "@/styles/variables";
-@import "@/styles/mixins";
-
-
-
-.container {
+.searchbar {
   background-color: $color-primary-blur;
-  padding: 1.5rem 3rem 1rem;
-  border-radius: 8px;
+  border-radius: 5px;
+  margin: 0 auto;
 
-  div {
+  padding: 1.5rem 1.5rem;
+
+
+  .searchbar-container {
     display: flex;
     justify-items: center;
     gap: 0.5rem;
-  }
+    align-items: center;
+    justify-content: center;
 
-  .content {
-    @include lg() {
+    @include md() {
       flex-direction: column;
       align-items: normal;
     }
 
-    > span {
+
+    &__title {
       font-weight: $font-semibold;
       font-size: $text-base;
     }
 
-    align-items: center;
+    &__input {
+      border: 1px solid #ccc;
+      outline: none;
+      border-radius: 0.5rem;
+      padding: 1rem 0.5rem;
+      min-width: 30rem;
 
-    button {
+      @include md() {
+        min-width: 0;
+        flex: 1
+      }
+
+
+      &:focus {
+        border-color: $color-blue
+      }
+    }
+
+
+    &__button {
       background-color: $color-primary;
       border: none;
       border-radius: 8px;
@@ -42,18 +58,6 @@
         margin-left: 0.3rem;
         color: white;
       }
-    }
-  }
-
-  input {
-    border: 1px solid #ccc;
-    outline: none;
-    flex: 1;
-    border-radius: 0.5rem;
-    padding: 1rem 0.5rem;
-
-    &:focus {
-      border-color: $color-blue
     }
   }
 
