--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $color-second: #eae9e9;
 $color-blue: #007bff;
 $color-text: #333;
 $color-text-light: #666;
-
+$bg-color: #F5F5F5;
 
 $text-xs: 0.75rem; // 12px
 $text-sm: 0.875rem; // 14px
@@ -26,7 +26,7 @@ $text-5xl: 3rem; // 48px
 $font-thin: 100;
 $font-extralight: 200;
 $font-light: 300;
-$font-regular: 400;   // normal
+$font-regular: 400; // normal
 $font-medium: 500;
 $font-semibold: 600;
 $font-bold: 700;
@@ -34,5 +34,8 @@ $font-extrabold: 800;
 $font-black: 900;
 
 $checkbox-width: 18px;
+
+$checkbox-border: #111;;
+$checkbox-active: #007bff;
 
 
